cmake_minimum_required(VERSION 3.17)
project(redtamarin)

set(CMAKE_CXX_STANDARD 14)

add_definitions(-DAVMSHELL_BUILD)
add_definitions(-DAVMSYSTEM_IA32=0)
add_definitions(-DAVMSYSTEM_ARM=0)
add_definitions(-DAVMSYSTEM_PPC=0)
add_definitions(-DAVMSYSTEM_SPARC=0)
add_definitions(-DAVMSYSTEM_MIPS=0)
add_definitions(-DAVMSYSTEM_SH4=0)
add_definitions(-DAVMSYSTEM_AMD64=1)
add_definitions(-DAVMSYSTEM_64BIT=1)
#add_definitions(-DSIXTYFOURBIT=1)
#add_definitions(-DAVMSYSTEM_MAC)
add_definitions(-D_MAC)

add_subdirectory(src/core)
add_subdirectory(src/platform)
add_subdirectory(src/VMPI)
add_subdirectory(src/AVMPI)
add_subdirectory(src/vmbase)
add_subdirectory(src/shell)
add_subdirectory(src/generated)
add_subdirectory(src/MMgc)
add_subdirectory(src/eval)
add_subdirectory(src/extensions)
add_subdirectory(src/api)
add_subdirectory(src/pcre)
add_subdirectory(src/other-licenses/lzma)
add_subdirectory(src/other-licenses/zlib)
add_subdirectory(src/nanojit)

add_executable(avm src/shell/avmshellMac.cpp)
target_link_libraries(avm shell)